--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace=fragments :: head">
+<head th:replace="fragments :: head">
 </head>
 <body>
+
+    <nav th:replace="fragments :: navigation"></nav>
+
+    <form method="POST" style="max-width:600px" th:object="${measurements}">
+        <div class="form-group">
+            <label th:for="distance">Enter distance of measurement</label>
+            <input class="form-control" th:field="*{distance}" />
+            <span th:errors="*{distance}" class="error"></span>
+        </div>
+        <div class="form-group">
+            <label th:for="latitude">Enter latitude of measurement</label>
+            <input class="form-control" th:field="*{latitude}" />
+            <span th:errors="*{latitude}" class="error"></span>
+        </div>
+        <div class="form-group">
+            <label th:for="longitude">Enter longitude of measurement</label>
+            <input class="form-control" th:field="*{longitude}" />
+            <span th:errors="*{longitude}" class="error"></span>
+        </div>
+
+        <input type="submit" value="Find measurement" />
+    </form>
 
 </body>
 </html>
