--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,14 +13,14 @@
             <span th:errors="*{distance}" class="error"></span>
         </div>
         <div class="form-group">
-            <label th:for="latitude">Enter latitude of measurement</label>
-            <input class="form-control" th:field="*{latitude}" />
-            <span th:errors="*{latitude}" class="error"></span>
+            <label th:for="radLat">Enter latitude of measurement</label>
+            <input class="form-control" th:field="*{radLat}" />
+            <span th:errors="*{radLat}" class="error"></span>
         </div>
         <div class="form-group">
-            <label th:for="longitude">Enter longitude of measurement</label>
-            <input class="form-control" th:field="*{longitude}" />
-            <span th:errors="*{longitude}" class="error"></span>
+            <label th:for="radLng">Enter longitude of measurement</label>
+            <input class="form-control" th:field="*{radLng}" />
+            <span th:errors="*{radLng}" class="error"></span>
         </div>
 
         <input type="submit" value="Find measurement" />
