--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 
 <div class="container"><div id="map"></div><form class="form-control" method="POST" th:object="${gmap}">
     <div id="floating-panel">
-        <input id="address" class="form-control" value="The Gateway Arch, St. Louis, MO" th:field="*{address}">
-        <input id="submit" type="button" value="Encode">
+        <input id="address" type="search" class="form-control" value="The Gateway Arch, St. Louis, MO" th:field="*{address}">
+        <input id="submit" type="button" class="btn btn-default" value="🔍Locate">
     </div>
     <script>
         initMap();
