--- a/src/main/resources/templates/manual-search.html
+++ b/src/main/resources/templates/manual-search.html
@@ -7,7 +7,7 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 
-<form method="POST" action="/manual" style="max-width:600px" th:object="${measurements}">
+<div class="container"><form method="POST" action="/manual" style="max-width:600px" th:object="${measurements}">
 
     <div class="form-group">
         <label th:for="radLat">Enter latitude of measurement</label>
@@ -21,7 +21,7 @@
     </div>
 
     <input type="submit" value="Find measurement" />
-</form>
+</form></div>
 
 </body>
 </html>
