--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <style>
-        html {
+        html, body {
             margin: 0;
             padding: 0;
             height: 100%;
@@ -15,18 +15,27 @@
         }
         body {
             background-color: DarkSeaGreen;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
         }
         th, td {
             padding: 5px;
         }
+        a:link {
+            color: DarkBlue;
+        }
+        a:hover {
+            color: DimGray;
+        }
         #map {
-            height: 768px;
-            width: 1024px;
-            position: inherit;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
+        #map_container {
+            width: 100%;
+            height: 65%;
+            position: relative;
         }
         #floating-panel {
             position: absolute;
