--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,12 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="container"><div id="map"></div><form class="form-control" method="POST" th:object="${gmap}">
-    <div id="floating-panel">
-        <div><input id="address" type="search" class="form-control" th:value="${address}" th:field="*{address}" autofocus></div>
-        <div><button id="locate" type="button" class="btn btn-primary">🔍Locate</button></div>
+<div id="map_container"><div id="map"></div></div>
+<div class="container"><form class="form-inline" action="/" method="POST" th:object="${gmap}">
+    <div id="floating-panel" class="form-group">
+        <label for="address">Search the map:&nbsp;&nbsp;</label>
+        <input id="address" type="search" class="form-control" th:value="${address}" th:field="*{address}">
+        <button id="locate" type="button" class="btn btn-primary">🔍Locate</button>
     </div>
     <script>
         initMap();
@@ -41,11 +43,11 @@
     </script>
     <script th:attr="src=${key}"
         async defer></script>
-    <div class="form-group">
-        <input type="submit" class="btn btn-default" value="Find measurement here" />
-        <span th:errors="*{address}" class="error"></span>
-        <p>You can also find a measurement by <a href="/manual">entering coordinates manually.</a></p>
-    </div></form>
+        <button type="submit" class="btn btn-block">Find measurement here</button>
+            <span th:errors="*{address}" class="error"></span>
+    </form></div>
+<div class="container"
+    <p>You can also find a measurement by <a href="/manual">entering coordinates manually.</a></p>
 </div>
 </body>
 </html>
